--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Ольга Андрианова</title>
     </head>
 <body>
-<div class="image"><img  src="..//preview git/img/taplink_olga_example.png" alt="taplink_olga_example"></div> 
+<div class="image"><img  src="img/taplink_olga_example.png" alt="taplink_olga_example"></div> 
 
 
 
