--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-        <link rel="stylesheet" href="..//preview git/css/style.css">
+        <link rel="stylesheet" href="css/style.css">
         <title>Ольга Андрианова</title>
     </head>
 <body>
